# libre-agent

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  agent.py  api.py  app.py  clients.py  config.py  mcp.json.example  mcp_bridge.py  memory.py  prompts.py  pyproject.toml  requirements.txt  run-bot.sh  run-spa.sh  run.sh  skills.py  soul.md  store.py  telegram_bot.py  tools.py  trace.py
.streamlit/: config.toml
design/: redesign.dc.html
docs/: como-funciona.html  como-funciona.md  llama-cpp.md  memory-mcp.md
evals/: harness.py  report.md
prompts/: compact.txt  memory_extract.txt  memory_recall_header.txt  soul.md  soul.md.example  soul_fallback.md  tools.es.json
skills/: nuevo-proyecto-python.md  resumen-mi-semana.md
tests/: test_agent_run_turn.py  test_compact.py  test_mcp_config.py  test_read_file.py  test_skills.py  test_store.py  test_text_tool_calls.py  test_tools_guards.py
web/: app.js  index.html  style.css
